--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Oct 12 17:31:13 CEST 2006 Daniel Veillard <veillard@redhat.com>
+
+	* src/xen_internal.c: one of the fix for system with page size != 4k
+	  was missing
+
 Thu Oct 12 13:37:24 CEST 2006 Daniel Veillard <veillard@redhat.com>
 
 	* src/xen_internal.c: applied patch from Philippe Berthault
