--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Tue Oct 24 15:31:23 EDT 2006 Daniel P.Berrange <berrange@redhat.com>
+
+	* python/generator.py, python/libvir.c: Drop python interpreter
+	lock when calling into C functions, and re-grab when invoking
+	error callback.
+	* python/libvirt_wrap.h: Convenience macros for grabbing / dropping
+	the python interpreter lock in threaded environment.
+
+
 Mon Oct 16 17:10:15 CEST 2006 Daniel Veillard <veillard@redhat.com>
 
 	* config.h.in configure.in libvirt.spec.in docs/libvir.html
