--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Nov  8 13:00:56 EDT 2006 Daniel Berrange <berrange@redhat.com>
+
+	* src/test.c, src/test.h: Added implementation of the virDomainGetOSType
+	driver method to the test hypervisor backend.
+
 Wed Nov  8 16:58:56 CET 2006 Daniel Veillard <veillard@redhat.com>
 
 	* include/libvirt/virterror.h src/virterror.c src/xend_internal.c
