--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Nov 10 17:53:41 EDT 2006 Daniel Berrange <berrange@redhat.com>
+
+	* src/xml.c: Fix memory leak, by freeing xmlParserContextPtr object
+
 Fri Nov 10 11:19:32 CET 2006 Daniel Veillard <veillard@redhat.com>
 
 	* src/xend_internal.c src/xml.c: add an extra element currentMemory
