--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Dec  4 17:47:03 CET 2006 Daniel Veillard <veillard@redhat.com>
+
+	* po/ca.po po/fr.po po/hi.po: merging more localizations coming
+	  from Red Hat
+
 Wed Nov 29 13:13:39 CET 2006 Daniel Veillard <veillard@redhat.com>
 
 	* NEWS configure.in libvirt.spec.in docs/libvir.html docs/news.html
