--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Mon Dec  6 17:46:03 EST 2006 Daniel Berrange <berrange@redhat.com>
+
+	* src/xend_internal.c: Support parsing of new paravirt framebuffer
+	graphics configuration from xen 3.0.4 tree.
+	* test/sexpr2xmltest.c: Added test cases for new & old framebuffer
+	config parsing in paravirt & fullyvirt.
+	* test/sexpr2xmldata/sexpr2xml-pv-vfb-*: New test data files
+
 Mon Dec  6 17:40:03 EST 2006 Daniel Berrange <berrange@redhat.com>
 
 	* test/xml2sexprdata/xml2sexpr-curmem.xml, test/xml2sexprdata/xml2sexpr-curmem.sexpr:
